@@ -1,3 +1,11 @@
+2011-09-16  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Add the forgotten test, also suppress a test in Chromium as it needs a rebaseline.
+
+        * platform/chromium/test_expectations.txt:
+        * editing/deleting/merge-paragraph-into-blockquote-expected.txt: Added.
+        * editing/deleting/merge-paragraph-into-blockquote.html: Added.
+
 2011-09-14  Ryosuke Niwa  <rniwa@webkit.org>
 
         Deleting line break before h1 converts h1 to span
